printscript-validator/src/test/resources/1.0/invalid-type-assignation/golden.ps
1:17-1:27 -> Error (Type Mismatch): Expected number, got string
3:1-3:25 -> Error (Type Mismatch): Cannot assign string value to identifier of type number